Update build instructions with Java 17